--- a/.github/workflows/run_caller.yml
+++ b/.github/workflows/run_caller.yml
@@ -1,7 +1,7 @@
 name: Call Collection Run
-# on:
-#   schedule:
-#     - cron: 0 0 * * *
+on:
+  schedule:
+    - cron: 0 0 * * *
   workflow_dispatch: null
 jobs:
   call-workflow:
